<resources>
    <string name="app_name">CodeProject</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="error_text">error text</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="view_details">View Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="submit">Submit</string>
    <string name="billable">Billable</string>
    <string name="active">Active</string>
    <string name="add_project">Add project</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
