<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/ed_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/ed_description"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_below="@id/ed_title"
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/ed_start_date"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:layout_below="@id/ed_description"
        android:inputType="date"
        android:hint="@string/start_date"/>

    <EditText
        android:id="@+id/ed_end_date"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:inputType="date"
        android:layout_below="@id/ed_start_date"
        android:hint="@string/end_date"/>

    <CheckBox
        android:text="@string/billable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/ed_end_date"
        android:id="@+id/cb_is_billable" />

    <CheckBox
        android:text="@string/active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/cb_is_billable"
        android:id="@+id/cb_is_active" />


    <Button
        android:id="@+id/btn_submit"
        style="@style/SubmitButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:enabled="true"
        android:text="@string/submit"
        android:textAllCaps="false" />


</RelativeLayout>