<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginEnd="40dp"
    android:layout_marginStart="40dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_project_list_item">

    <LinearLayout
        android:id="@+id/ll_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_project_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="Abby's House Project" />

        <TextView
            android:id="@+id/tv_project_key"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2sp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="PK: 1" />

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="Start Date: 12 Feb 2017" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_details"
        android:background="@color/halfBaked" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_below="@id/ll_details"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_view_details"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/view_details"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/halfBaked" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/halfBaked" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>